# barbatos-json

./: CMakeLists.txt  README.md  barbjson.h  test.cc
include/: barbjson.hpp
src/: barbjson.cpp
tests/: main.cpp
